<resources>
    <string name="app_name">Introduction to Android Programming</string>
    <string name="activitytwo">Activity Two</string>
    <string name="activitythree">Activity Three</string>
    <string name="activityfour">Activity Four</string>
    <string name="mainactivity">Main Activity</string>
    <string name="hellothisismainActivity">Hello This is MainActivity</string>
    <string name="trybuttonsbelow">Try Buttons Below</string>
    <string name="thisisthirdactivity">This is Third Activity</string>
    <string name="typehere">Type Something</string>
    <string name="typeheretwo">Type Something</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="todo">TODO</string>
    <string name="option">Option1</string>
    <string name="list">List</string>
    <string name="gocalc">Calculator</string>
    <string name="nice">Nice</string>
    <string name="changing_activity">Changing Activity</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="areyousure">Are you sure?</string>
    <string name="activitychange">Activity change</string>
    <string name="alertreceive">Alert Received</string>
    <string name="youopenedtwo">You Opened Activity Two</string>
    <string name="thisismain">This is Main</string>
    <string name="quitapp">Exit Application</string>
    <string name="youopnactthree">You Opened Activity Three</string>
    <string name="youopnactfour">You Opened Activity Four</string>
    <string name="youopnnumact">You Opened Number Activity</string>
    <string name="youopnlistact">You Opened List Activity</string>
    <string name="youclicksome1">You clicked Something1</string>
    <string name="youclicksome2">You clicked Something2</string>
    <string name="youclicksome3">You clicked Something3</string>
    <string name="youclicksome4">You clicked Something4</string>
    <string name="somethingone">Something One</string>
    <string name="somethingtwo">Something Two</string>
    <string name="somethingthree">Something Three</string>
    <string name="somethingfour">Something Four</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="clickhere">click here</string>
    <string name="inputdata">Input Data</string>
    <string name="add">ADD</string>
    <string name="delete">DELETE</string>
    <string name="id">ID</string>
    <string name="enteruserid">Enter User ID For Altering Data</string>
    <string name="show">SHOW</string>
</resources>
