<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nicetext"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="164dp"
        android:paddingTop="152dp"
        android:text="@string/nice"
        android:textSize="24sp" />
    
    <Button
        android:id="@+id/buttonSeven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seven"
        android:layout_above="@id/buttonFour"
        android:layout_toLeftOf="@id/buttonEight"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="291dp"
        android:layout_toStartOf="@id/buttonEight" />

    <Button
        android:id="@+id/buttonEight"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/eight"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/buttonFive"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="289dp" />

    <Button
        android:id="@+id/buttonNine"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:text="@string/nine"
        android:layout_above="@+id/buttonSix"
        android:layout_toRightOf="@id/buttonEight"
        tools:layout_editor_absoluteX="237dp"
        tools:layout_editor_absoluteY="299dp"
        android:layout_toEndOf="@id/buttonEight" />

    <Button
        android:id="@+id/buttonFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/four"
        android:layout_above="@id/buttonOne"
        android:layout_toLeftOf="@id/buttonFive"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="347dp"
        android:layout_toStartOf="@id/buttonFive" />

    <Button
        android:id="@+id/buttonFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonOne"
        android:layout_centerHorizontal="true"
        android:text="@string/five"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="345dp" />

    <Button
        android:id="@+id/buttonSix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/six"
        android:layout_above="@id/buttonThree"
        android:layout_toRightOf="@+id/buttonFive"
        tools:layout_editor_absoluteX="237dp"
        tools:layout_editor_absoluteY="347dp"
        android:layout_toEndOf="@+id/buttonFive" />

    <Button
        android:id="@+id/buttonOne"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/buttonTwo"
        android:layout_toLeftOf="@id/buttonTwo"
        android:text="@string/one"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="395dp"
        android:layout_toStartOf="@id/buttonTwo" />

    <Button
        android:id="@+id/buttonTwo"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:text="@string/two"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/buttonZero"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="393dp" />

    <Button
        android:id="@+id/buttonThree"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:text="@string/three"
        android:layout_alignBaseline="@id/buttonTwo"
        android:layout_toRightOf="@id/buttonTwo"
        tools:layout_editor_absoluteX="237dp"
        tools:layout_editor_absoluteY="395dp"
        android:layout_toEndOf="@id/buttonTwo" />

    <Button
        android:id="@+id/buttonZero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="447dp" />
</RelativeLayout>